@@ -1,5 +1,4 @@
 <?php
-
 /**
  * @file
  * Installation actions for Slick.
