@@ -1,5 +1,4 @@
 <?php
-
 /**
  * @file
  * Slick carousel integration, the last carousel you'll ever need.
