@@ -1,5 +1,4 @@
 <?php
-
 /**
  * @file
  * Provides development options for the Slick module.
