@@ -1,5 +1,4 @@
 <?php
-
 /**
  * @file
  * Provides Slick carousel examples.
