@@ -1,5 +1,4 @@
 <?php
-
 /**
  * @file
  * Adds Views plugins for Slick carousel.
