@@ -1,5 +1,4 @@
 <?php
-
 /**
  * @file
  * Provides test cases for Slick carousel based on flexslider.test.
