@@ -1,5 +1,4 @@
 <?php
-
 /**
  * @file
  * Provides tests for Slick carousel.
